--- a/code/site/src/pages/seriessingle/seriessingle.html
+++ b/code/site/src/pages/seriessingle/seriessingle.html
@@ -15,7 +15,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="">
-	<link rel="profile" href="#">
+	<link rel="profile" href="../profilo/profilo.php">
 
 	<!--Google Font-->
 	<link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600' />
@@ -254,7 +254,7 @@
                                 } else {
                                     echo '<img src="../../images/uploads/user.jpg" alt="" width="40" height="40">';
                                 }
-                                echo '<li><a href="#">' . $utente['nome'] . '</a></li>';
+                                echo '<li><a href="../profilo/profilo.php">' . $utente['nome'] . '</a></li>';
                                 echo '<li><a href="../service/logout.php">Disconetti</a></li>';
                             }
                         ?>
