--- a/code/site/src/pages/profilo/userfavoritelist.html
+++ b/code/site/src/pages/profilo/userfavoritelist.html
@@ -148,19 +148,19 @@
 					</ul>
 					<ul class="nav navbar-nav flex-child-menu menu-right">
 						<?php 
-                            if($utente == null) {
-                                echo '<li class="loginLink"><a>Accedi</a></li>';
-                                echo '<li class="btn signupLink"><a>Registrati</a></li>';
-                            } else {
-                                if ($utente['foto'] != null) {
-                                    echo '<img src="data:image/jpeg;base64,' . base64_encode($utente['foto']) . '" alt="" width="40" height="40">';
-                                } else {
-                                    echo '<img src="../../images/uploads/user.jpg" alt="" width="40" height="40">';
-                                }
-                                echo '<li><a href="../profilo/profilo.php">' . $utente['nome'] . '</a></li>';
-                                echo '<li><a href="../service/logout.php">Disconetti</a></li>';
-                            }
-                        ?>
+								if($utente == null) {
+									echo '<li class="loginLink"><a>Accedi</a></li>';
+									echo '<li class="btn signupLink"><a>Registrati</a></li>';
+								} else {
+									if ($utente['foto'] != null) {
+										echo '<img src="data:image/jpeg;base64,' . base64_encode($utente['foto']) . '" alt="" width="40" height="40">';
+									} else {
+										echo '<img src="../../images/uploads/user.jpg" alt="" width="40" height="40">';
+									}
+									echo '<li><a href="../profilo/profilo.php">' . $utente['nome'] . '</a></li>';
+									echo '<li><a href="../service/logout.php">Disconetti</a></li>';
+								}
+							?>
 					</ul>
 				</div>
 				<!-- /.navbar-collapse -->
@@ -192,87 +192,136 @@
 			</div>
 		</div>
 	</div>
-	<div class="page-single">
+	<div class="page-single userfav_list">
 		<div class="container">
-			<div class="row ipad-width">
+			<div class="row ipad-width2">
 				<div class="col-md-3 col-sm-12 col-xs-12">
 					<div class="user-information">
 						<div class="user-img">
 							<?php
 								if ($utente['foto'] != null) {
-									echo '<a><img src="data:image/jpeg;base64,' . base64_encode($utente['foto']) . '" alt="" width="120" height="120"></a><br>';
+									echo '<a><img id="foto" src="data:image/jpeg;base64,' . base64_encode($utente['foto']) . '" alt="" width="120" height="120"></a><br>';
 								} else {
-									echo '<img src="../../images/uploads/user.jpg" alt="" width="120" height="120"></a><br>';
+									echo '<img id="foto" src="../../images/uploads/user.jpg" alt="" width="120" height="120"></a><br>';
 								}
 							?>
-							<a href="#" class="redbtn">Cambia Avatr</a>
+							<label class="redbtn">
+								<input id="fileInput" style="display: none;" type="file" />
+								Cambia foto
+							</label>
 						</div>
 						<div class="user-fav">
 							<p>Le mie sezioni</p>
 							<ul>
-								<li class="active"><a href="profilo.php">Profilo</a></li>
-								<li><a href="preferiti.php">I miei preferiti</a></li>
+								<li><a href="profilo.php">Profilo</a></li>
+								<li class="active"><a href="preferiti.php">I miei preferiti</a></li>
 								<li><a href="userrate.html">Le mie recensioni</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-9 col-sm-12 col-xs-12">
-					<div class="form-style-1 user-pro" action="">
-						<form action="" class="user">
-							<h4>01. Dettagli profilo</h4>
-							<div class="row">
-								<div class="col-md-6 form-it">
-									<label>Username</label>
-									<input type="text" placeholder="<?php echo $utente['username'];?>">
-								</div>
-								<div class="col-md-6 form-it">
-									<label>Email</label>
-									<input type="text" placeholder="<?php echo $utente['email'];?>">
-								</div>
+					<div class="topbar-filter user">
+						<p>Found <span>1,608 movies</span> in total</p>
+						<label>Sort by:</label>
+						<select>
+							<option value="range">-- Choose option --</option>
+							<option value="saab">-- Choose option 2--</option>
+						</select>
+						<a href="userfavoritelist.html" class="list"><i class="ion-ios-list-outline active"></i></a>
+						<a href="userfavoritegrid.html" class="grid"><i class="ion-grid "></i></a>
+					</div>
+					<div class="flex-wrap-movielist user-fav-list">
+						<div class="movie-item-style-2">
+							<img src="images/uploads/mv1.jpg" alt="">
+							<div class="mv-item-infor">
+								<h6><a href="#">oblivion <span>(2012)</span></a></h6>
+								<p class="rate"><i class="ion-android-star"></i><span>8.1</span> /10</p>
+								<p class="describe">Earth's mightiest heroes must come together and learn to fight as a
+									team if they are to stop the mischievous Loki and his alien army from enslaving
+									humanity...</p>
+								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
+										2015</span></p>
+								<p>Director: <a href="#">Joss Whedon</a></p>
+								<p>Stars: <a href="#">Robert Downey Jr.,</a> <a href="#">Chris Evans,</a> <a href="#">
+										Chris Hemsworth</a></p>
 							</div>
-							<div class="row">
-								<div class="col-md-6 form-it">
-									<label>Nome</label>
-									<input type="text" placeholder="<?php echo $utente['nome'];?>">
-								</div>
-								<div class="col-md-6 form-it">
-									<label>Cognome</label>
-									<input type="text" placeholder="<?php echo $utente['cognome'];?>">
-								</div>
+						</div>
+						<div class="movie-item-style-2">
+							<img src="images/uploads/mv2.jpg" alt="">
+							<div class="mv-item-infor">
+								<h6><a href="#">into the wild <span>(2014)</span></a></h6>
+								<p class="rate"><i class="ion-android-star"></i><span>7.8</span> /10</p>
+								<p class="describe">As Steve Rogers struggles to embrace his role in the modern world,
+									he teams up with a fellow Avenger and S.H.I.E.L.D agent, Black Widow, to battle a
+									new threat...</p>
+								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
+										2015</span></p>
+								<p>Director: <a href="#">Anthony Russo,</a><a href="#">Joe Russo</a></p>
+								<p>Stars: <a href="#">Chris Evans,</a> <a href="#">Samuel L. Jackson,</a> <a href="#">
+										Scarlett Johansson</a></p>
 							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<input class="submit" type="submit" value="Salva">
-								</div>
+						</div>
+						<div class="movie-item-style-2">
+							<img src="images/uploads/mv3.jpg" alt="">
+							<div class="mv-item-infor">
+								<h6><a href="#">blade runner <span>(2015)</span></a></h6>
+								<p class="rate"><i class="ion-android-star"></i><span>7.3</span> /10</p>
+								<p class="describe">Armed with a super-suit with the astonishing ability to shrink in
+									scale but increase in strength, cat burglar Scott Lang must embrace his inner hero
+									and help...</p>
+								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
+										2015</span></p>
+								<p>Director: <a href="#">Peyton Reed</a></p>
+								<p>Stars: <a href="#">Paul Rudd,</a> <a href="#"> Michael Douglas</a></p>
 							</div>
-						</form>
-						<form action="" class="password">
-							<h4>02. Cambia Password</h4>
-							<div class="row">
-								<div class="col-md-6 form-it">
-									<label>Vecchia Password</label>
-									<input type="password">
-								</div>
+						</div>
+						<div class="movie-item-style-2">
+							<img src="images/uploads/mv4.jpg" alt="">
+							<div class="mv-item-infor">
+								<h6><a href="#">Mulholland pride<span> (2013) </span></a></h6>
+								<p class="rate"><i class="ion-android-star"></i><span>7.2</span> /10</p>
+								<p class="describe">When Tony Stark's world is torn apart by a formidable terrorist
+									called the Mandarin, he starts an odyssey of rebuilding and retribution.</p>
+								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
+										2015</span></p>
+								<p>Director: <a href="#">Shane Black</a></p>
+								<p>Stars: <a href="#">Robert Downey Jr., </a> <a href="#"> Guy Pearce,</a><a
+										href="#">Don Cheadle</a></p>
 							</div>
-							<div class="row">
-								<div class="col-md-6 form-it">
-									<label>Nuova Password</label>
-									<input type="password">
-								</div>
+						</div>
+						<div class="movie-item-style-2">
+							<img src="images/uploads/mv5.jpg" alt="">
+							<div class="mv-item-infor">
+								<h6><a href="#">skyfall: evil of boss<span> (2013) </span></a></h6>
+								<p class="rate"><i class="ion-android-star"></i><span>7.0</span> /10</p>
+								<p class="describe">When Tony Stark's world is torn apart by a formidable terrorist
+									called the Mandarin, he starts an odyssey of rebuilding and retribution.</p>
+								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
+										2015</span></p>
+								<p>Director: <a href="#">Alan Taylor</a></p>
+								<p>Stars: <a href="#">Chris Hemsworth, </a> <a href="#"> Natalie Portman,</a><a
+										href="#">Tom Hiddleston</a></p>
 							</div>
-							<div class="row">
-								<div class="col-md-6 form-it">
-									<label>Conferma Nuova Password</label>
-									<input type="password">
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<input class="submit" type="submit" value="Salva">
-								</div>
-							</div>
-						</form>
+						</div>
+					</div>
+					<div class="topbar-filter">
+						<label>Movies per page:</label>
+						<select>
+							<option value="range">5 Movies</option>
+							<option value="saab">10 Movies</option>
+						</select>
+
+						<div class="pagination2">
+							<span>Page 1 of 2:</span>
+							<a class="active" href="#">1</a>
+							<a href="#">2</a>
+							<a href="#">3</a>
+							<a href="#">...</a>
+							<a href="#">78</a>
+							<a href="#">79</a>
+							<a href="#"><i class="ion-arrow-right-b"></i></a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -283,7 +332,7 @@
 		<div class="container">
 			<div class="flex-parent-ft">
 				<div class="flex-child-ft item1">
-					<a href="index.html"><img class="logo" src="../../images/logo1.png" alt=""></a>
+					<a href="index.html"><img class="logo" src="images/logo1.png" alt=""></a>
 					<p>5th Avenue st, manhattan<br>
 						New York, NY 10001</p>
 					<p>Call us: <a href="#">(+01) 202 342 6789</a></p>
